// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`glitch should change target on attack 1`] = `
"*Игрок 1* использовал _Глюки_ на *Игрок 5*
\\[ 📖80 ]
*Игрок 5* пустил кровь *Игрок 3* _Оружием_ и нанёс *7.2* урона
\\[ Игрок 3 💥 💔-7.2/0.8 📖58 ]
_Глюки_ *Игрок 1*"
`;

exports[`glitch should change target on attack if casted multiple times 1`] = `
"*Игрок 1* использовал _Глюки_ на *Игрок 5*
\\[ 📖80 ]
*Игрок 2* использовал _Глюки_ на *Игрок 5*
\\[ 📖8000 ]
*Игрок 5* пустил кровь *Игрок 3* _Оружием_ и нанёс *7.2* урона
\\[ Игрок 3 💥 💔-7.2/0.8 📖58 ]
_Глюки_ *Игрок 1*
_Глюки_ *Игрок 2*"
`;
